--- a/index.html
+++ b/index.html
@@ -55,27 +55,27 @@
         life, but their families are vital to their survival and so important to them, <strong>just like us.</strong>
       </p>
       <a class="button" href="../contact/">Hit Us Up</a>
-      <figure>
-        <img src="../images/otters-kissing.jpg" alt="Picture of Otters Kissing" height="300" width="300" loading="lazy">
+      <figure class="pic">
+        <img src="images/otters-kissing.jpg" alt="Picture of Otters Kissing" height="300" width="300" loading="lazy">
         <figcaption>Otters Showing Love</figcaption>
       </figure>
     </article>
 
     <div class="cards">
       <a class="card" href="#">
-        <img src="../images/idk-otter.jpg" alt="Confused Otter" height="500" width="500">
+        <img src="images/idk-otter.jpg" alt="Confused Otter" height="500" width="500">
         <p>Otter FAQs</p>
       </a>
       <a class="card" href="#">
-        <img src="../images/oh-my.jpg" alt="Shocked Otter" height="500" width="500">
+        <img src="images/oh-my.jpg" alt="Shocked Otter" height="500" width="500">
         <p>Otter Misconceptions</p>
       </a>
       <a class="card" href="#">
-        <img src="../images/otter-fam.jpg" alt="Family of Otters" height="500" width="500">
+        <img src="images/otter-fam.jpg" alt="Family of Otters" height="500" width="500">
         <p>Otter Families</p>
       </a>
       <a class="card" href="#">
-        <img src="../images/fish.jpg" alt="Fish" height="500" width="500">
+        <img src="images/fish.jpg" alt="Fish" height="500" width="500">
         <p>What Otters Eat</p>
       </a>
     </div>
